# orion-belt

./: .dockerignore  .env.agent.example  .env.server.example  .gitignore  .goreleaser.yaml  404.html  CNAME  Dockerfile  LICENSE  Makefile  README.md  blog.html  docker-compose.agent.yml  docker-compose.server.yml  go.mod  go.sum  index.html  markdown-page.html  sitemap.xml
.github/: CODEOWNERS
assets/: orion-belt-in-action.mov
blog/: announcing-orion-belt.html  archive.html  atom.xml  authors.html  bastion-vs-pam.html  commons-clause-honesty.html  introducing-orion-belt.html  jit-access-approvals.html  lessons-building-self-hosted-pam.html  linux-packages-and-labs.html  live-session-watch.html  looking-for-early-operators.html  managing-homelab-access.html  mfa-webauthn-ssh.html  open-source-pam-landscape.html  open-sourcing-orion-belt.html  optional-ssh-ca.html  orion-belt-vs-teleport.html  rebac-for-ssh-machines.html  reverse-ssh-tunneling-explained.html  rss.xml  session-recording-is-hard.html  tags.html  ten-minute-install-path.html  welcome-orion-belt-v1.html  why-reverse-ssh-agents.html
config/: agent.example.yaml  client.example.yaml  server.example.yaml
docker/: Dockerfile  Dockerfile.agent  agent-entrypoint.sh  docker-compose.yml  server-entrypoint.sh
docs/: 0.0.1.html  0.0.2.html  0.1.0.html  0.2.0.html  0.3.0.html  0.4.0.html  0.5.0.html  0.6.0.html  0.7.0.html  0.8.0.html  0.9.0.html  API_STABILITY.md  ARCHITECTURE.md  CLIENT-CLI.md  GO_SDK.md  (+20 more)
sdk/python/: README.md  pyproject.toml
sdk/python/src/orion_belt_sdk/: __init__.py  client.py  types.py
(+1617 files in other folders)
